# alice-lri-experiments

./: .env  .gitignore  .gitmodules  LICENSE.md  README.md  REPRODUCIBILITY.md  container.def
conda/: conda_env.yml  init_conda.sh
container/: README.md  apt_packages.txt  conda_env.yml  container.def
db/: experiments_db.sql
local/: build.sh  definition.json  definition_intrinsics.json  experiment_manager.py  install.sh
local/scripts/: .env  migrate_laser_gt.py  populate_laser_gt.py
merge/: merge_experiments_db.sh  merge_ground_truth_db.sh
merge/helper/: merge_db.py  merge_header.sh
results/: README.md  alice_times.csv  rtst_times.csv
scripts/: README.md
scripts/common/: build.sh  install.sh  load_env.py  load_env.sh
scripts/cpp/: CMakeLists.txt  conanfile.txt  intrinsics_to_sql.cpp  measure_times.cpp
scripts/cpp/utils/: FileUtils.cpp  FileUtils.h
scripts/local/: README.md  measure_rtst_times.py  requirements.txt
scripts/merge/: README.md  merge_db.sh  merge_experiments_db.sh
scripts/slurm/: README.md
slurm/compression/: compare.py  compress_job.sh  container_run.sh  job.sh  prepare.sh  prepare_and_launch.sh  run_compression_experiment.py  task.sh  task_item.sh  train_job.sh
slurm/estimate/: job.sh  pre_job.py  prepare_and_launch.sh  task.sh  task_item.sh
slurm/ground_truth/: job.sh  populate_ground_truth_db.py  prepare_and_launch.sh  task.sh  task_item.sh
slurm/helper/: insert_experiment_row.py  multi_batch_job_header.sh  paths.sh  prepare_task_item.sh
slurm/ri/: prepare.sh  prepare_and_launch.sh  ri_job.sh  task.sh  task_item.sh  (+1 more)
(+101 files in other folders)
